fixed overflowing big names in table

--- a/styles/PoolTable.module.css
+++ b/styles/PoolTable.module.css
@@ -12,6 +12,7 @@
     padding: 12px;
     background: var(--white);
     background-clip: padding-box;
+    max-width: 8rem;
 }
 
 .rowNumber {
@@ -28,6 +29,8 @@
     position: sticky;
     left: 0;
     outline: 1px solid var(--grey);
+    text-align: left;
+    overflow-wrap: anywhere;
 }
 
 .tableCellBottom{
